--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -2,8 +2,7 @@
   width: 95vw;
   display: flex;
   flex-direction: column;
-  height: 75vh;
+  height: auto;
+  min-height: 0;
   margin-bottom: 1.5rem;
 }
-
-
